<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <group >
        <item
            android:id="@+id/navmenu_main_contacts"
            android:enabled="true"
            android:icon="@drawable/ic_perm_contact_calendar_black_24dp"
            android:title="@string/navMenu_main_contacts"
            android:visible="true" />

        <item
            android:id="@+id/navmenu_main_mapa"
            android:enabled="true"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/navMenu_main_mapa"
            android:visible="true" />

        <item
            android:id="@+id/navmenu_main_logout"
            android:enabled="true"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/navMenu_main_logout"
            android:visible="true" />

        <item
            android:id="@+id/navmenu_version"
            android:enabled="true"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/navMenu_main_version"
            android:visible="true" />

    </group>
</menu>


