<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background_register"
    android:background="#3700B3"
    tools:context=".RegisterActivity"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="16dp">

    <EditText
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:id="@+id/regFirstName"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="6dp"
        android:background="#FFFFFF"
        android:hint="@string/regFName"
        android:textColorHint="#9E9E9E"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:padding="15dp"
        android:textColor="#9E9E9E"
        app:layout_constraintEnd_toStartOf="@+id/regLastName"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,MissingConstraints" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:id="@+id/regLastName"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:hint="@string/regLName"
        android:textColorHint="#9E9E9E"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:padding="15dp"
        android:textColor="#9E9E9E"
        app:layout_constraintBottom_toTopOf="@+id/regEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/regFirstName"
        app:layout_constraintVertical_bias="0.606"
        tools:ignore="Autofill" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:id="@+id/regEmail"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:hint="@string/reg_Email"
        android:textColorHint="#9E9E9E"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:padding="15dp"
        android:textColor="#9E9E9E"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/regPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regFirstName"
        tools:ignore="Autofill,UnusedAttribute" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:id="@+id/regPassword"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:background="#FFFFFF"
            android:hint="@string/regPass"
            android:textColorHint="#9E9E9E"
            android:inputType="textPassword"
            android:singleLine="true"
            android:padding="15dp"
            android:textColor="#9E9E9E"
            android:textSize="16sp"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintBottom_toTopOf="@+id/regCnfpass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill,UnusedAttribute"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:id="@+id/regCnfpass"
        android:layout_marginBottom="29dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:hint="@string/regCnfpass"
        android:textColorHint="#9E9E9E"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="#9E9E9E"
        android:textSize="16sp"
        android:maxLines="1"
        android:imeOptions="actionNext"
        app:layout_constraintBottom_toTopOf="@+id/registerUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerUser"
        android:layout_marginTop="12dp"
        android:background="#00ACC1"
        android:text="@string/registerUser"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regCnfpass"
        tools:ignore="UnusedAttribute" />

</android.support.constraint.ConstraintLayout>