<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              tools:context=".MapsActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:fitsSystemWindows="true"
            android:background="@color/md_blue_800"
            app:theme="@style/MaterialDrawerTheme.ActionBar">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Map"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:id="@+id/toolbar_title_map" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/search_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:maxLines="1"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/search_in_the_map"
                android:inputType="textNoSuggestions"
                tools:ignore="Autofill,ObsoleteLayoutParam,TextFields"/>


        <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/search"/>

    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/map"
              android:name="com.google.android.gms.maps.SupportMapFragment"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MapsActivity"
              tools:ignore="RedundantNamespace"/>

</LinearLayout>