<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerInParent="true"
    android:layout_centerVertical="false"
    android:background="#3700B3"
    android:padding="9dp"
    tools:context=".MainActivity">
    <!-- first TextInputLayout -->

    <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/etEmail"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="1dp"
            android:background="@android:color/white"
            android:hint="@string/etEmail"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/mail__ui"
            android:selectAllOnFocus="false"
            android:text="@string/etEmail"
            android:textColorHint="#9E9E9E"
            android:singleLine="true"
            android:textColor="#9E9E9E"
            android:textIsSelectable="false"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/etPassword"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="1dp"
            android:background="@android:color/white"
            android:ems="10"
            android:drawablePadding="16dp"
            android:ellipsize="start"
            android:drawableStart="@drawable/passsword_ui"
            android:padding="16dp"
            android:hint="@string/et_password"
            android:textColorHint="#9E9E9E"
            android:textColor="#9E9E9E"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/btLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" tools:ignore="Autofill"
    />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/btLogin"
        android:layout_marginBottom="152dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:background="@android:color/holo_blue_bright"
        android:descendantFocusability="afterDescendants"
        android:padding="15dp"
        android:text="@string/btLogin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/btRegister"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_bright"
        android:clickable="true"
        android:focusable="true"
        android:padding="15dp"
        android:text="@string/btRegister"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        android:descendantFocusability="afterDescendants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />

    <Button
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:id="@+id/btAccount"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_bright"
        android:descendantFocusability="afterDescendants"
        android:padding="15dp"
        android:longClickable="false"
        android:text="@string/btAccount"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textIsSelectable="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btMap"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btRegister"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:id="@+id/btMap"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_bright"
        android:clickable="true"
        android:descendantFocusability="afterDescendants"
        android:focusable="true"
        android:padding="15dp"
        android:text="@string/btMap"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btAccount"
        app:layout_constraintTop_toBottomOf="@+id/btRegister"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/Register_logo"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginStart="1dp"
        android:contentDescription="@null"
        android:descendantFocusability="afterDescendants"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/main_logo" />

</android.support.constraint.ConstraintLayout >